# ostreamable

./: CMakeLists.txt
include/: ostreamable.h
src/: CMakeLists.txt  ostreamable.cpp
tests/: CMakeLists.txt  tests.cpp
